k8s/sleepr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleepr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /reservations
            pathType: Prefix
            backend:
              service:
                name: reservations
                port:
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-http
                port:
                  number: 3001
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: auth-http
                port:
                  number: 3001
